Improved code performance(LINT)